Fix layout issues

--- a/src/assets/ecommerce.scss
+++ b/src/assets/ecommerce.scss
@@ -1,3 +1,9 @@
+body {
+  min-height: 100vh;
+  position: relative;
+  margin: 0;
+  padding-bottom: 70px;
+}
 
 a {
     cursor: pointer;
@@ -37,8 +43,11 @@ a {
 }
 
 .footer {
-    padding-top: 5px;
-    background-color: #f5f5f5;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #f5f5f5;
+  text-align: center;
 }
 
 .card-deck-wrapper > .card-deck > .card {
